# pplx_structured_output

./: .gitignore  README.md  api.py  article.py  config.py  main.py  pyproject.toml  requirements.txt  utils.py
tests/: conftest.py  requirements-test.txt  test_api.py  test_article.py  test_config.py
