[tool.poetry]
name = "pplx-litellm-test"
version = "0.1.0"
description = "Testing Perplexity API via LiteLLM"
authors = ["Tom Welsh <4956770+twelsh37@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litellm = "^1.61.20"
openai = "^1.65.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
